@@ -18,7 +18,6 @@ require 'tc_response_code'
 require 'tc_upload'
 require 'tc_forms'
 require 'tc_watches'
-require 'tc_parsing'
 require 'tc_authenticate'
 require 'tc_cookie_class'
 require 'tc_cookie_jar'
